# Navis

./: .gitignore  CMakeLists.txt  README.md  agilex_demo.py  user_api.html
include/: base64.hpp  curl_http_client.hpp  jsonparser.hpp  subscribe_json.h  ws_client.hpp
src/: main.cpp
